--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ volumes:
 x-shared_environment: &shared_environment
   LOG_LEVEL: ${LOG_LEVEL:-debug}
   DATABASE_HOST: db
-  DATABASE_NAME: vapor_database
+  DATABASE_NAME: app_weekly_report_service
   DATABASE_USERNAME: vapor_username
   DATABASE_PASSWORD: vapor_password
   
@@ -69,6 +69,6 @@ services:
       PGDATA: /var/lib/postgresql/data/pgdata
       POSTGRES_USER: vapor_username
       POSTGRES_PASSWORD: vapor_password
-      POSTGRES_DB: vapor_database
+      POSTGRES_DB: app_weekly_report_service
     ports:
       - '5432:5432'
